--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,11 @@ edition = "2021"
 
 [dependencies]
 image = "0.25"
+
+[[bin]]
+name = "without_arc"
+path = "src/without_arc.rs"
+
+[[bin]]
+name = "with_arc"
+path = "src/with_arc.rs"
